--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -127,3 +127,32 @@ th {
   justify-items: center;
   justify-content: space-between;
 }
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  border: 1px solid black;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+tr:hover {
+  background-color: #d1d1d1;
+}
+
+.launch {
+  background-color: green;
+  color: white;
+}
